[package]
name = "fuzzil-rs"
version = "0.1.0"
authors = ["drtychai <drtychai@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hibitset = "*"
type-operators = { path = "./type-operators-rs", version = "*" }
